# terrarium

./: .gitignore  .gitmodules  DELEGATE.md  README.md  TODO.md  pyproject.toml
benchmarks/: __init__.py  experiment_launcher.py
benchmarks/configs/: aime_adaptive_ar_then_gca_qwen3_8b_sonnet_seed0.yaml  aime_adaptive_ar_then_gca_smoke_qwen3_8b_sonnet_seed0.yaml  aime_adaptive_ar_then_gca_tiny_qwen3_8b_sonnet_seed0.yaml  aime_adaptive_cycle_ar_gca_qwen3_8b_sonnet_seed0.yaml  aime_compare.yaml  aime_gca_ar_compositions.yaml  aime_gepa_ar_haiku_sonnet.yaml  aime_gepa_gpt5_10k.yaml  aime_metric_budget_qwen3_8b_seeds_1_2.yaml  aime_metric_budget_seeds_1_2.yaml  aime_optimizer_cost_cap_compare.yaml  aime_optimizer_cost_cap_gca_then_ar.yaml  aime_threeway_gepa_gepa_cc_ar.yaml  arc_agi_gepa_ar_haiku_sonnet.yaml  omni_composition_smoke.yaml  optimize_anything_composition_smoke.yaml
docs/: benchmark_spec.md
scripts/: initial_candidate_adapter.py  reproduce_paper.sh  run_trick_sweep.sh  sandbox_probe.py  smoke_benchmark_matrix.py
src/terrarium/: __init__.py  __main__.py  adapter.py  budget.py  eval_server.py  pyproject.toml  registry.py  runner.py  sandbox.py  solver_lm.py  task.py  tracking.py
src/terrarium/adapters/: __init__.py  _anthropic_sdk_lm.py  claude_code.py  gepa.py  gepa_cc_agent.py  meta_harness.py  omni.py  omni_handoff.py  optimize_anything_adapter.py  optimize_anything_handoff.py
src/terrarium/conf/: config.yaml
src/terrarium/conf/adapter/: claude_code.yaml  custom.yaml  gepa.yaml  meta_harness.yaml  omni.yaml  optimize_anything.yaml
src/terrarium/conf/experiment/: trick_needle.yaml  trick_slots.yaml
src/terrarium/conf/optimizer/: autoresearch.yaml  gepa.yaml  gepa_cca.yaml  mh.yaml
src/terrarium/conf/task/: aime_math.yaml  aime_math_mini.yaml  arc_agi.yaml  cant_be_late.yaml  circle_packing.yaml  cloudcast.yaml  finer.yaml  formula.yaml  frontier_cs_algo_smoke.yaml  gso_smoke.yaml  gso_subset.yaml  livebench_math.yaml  needle_in_range.yaml  optuna_blackbox.yaml  slot_machines.yaml
src/terrarium/conf/tracking/: both.yaml  mlflow.yaml  none.yaml  wandb.yaml
src/terrarium/tasks/: __init__.py  _ace_prompts.py  _finance_common.py  aime_math.py  aime_math_mini.py  arc_agi.py  cant_be_late.py  circle_packing.py  cloudcast.py  finer.py  formula.py  frontier_cs.py  gso.py  needle_in_range.py  optuna_blackbox.py  slot_machines.py
src/terrarium/tasks/cant_be_late_lib/: __init__.py  simulation.py
src/terrarium/tasks/cloudcast_lib/: __init__.py  simulation.py
src/terrarium/tasks/cloudcast_lib/core/: __init__.py  (+3 more)
src/terrarium/tasks/finance/: __init__.py  _ace_scoring.py  _finance_common.py  finer.py  formula.py
src/terrarium/tasks/livebench_math/: __init__.py  _livebench_common.py  _livebench_scoring.py  livebench_math.py
tests/: test_arc_agi.py  test_benchmark_contract.py  test_eval_contract.py  test_experiment_launcher.py  test_oa_adapter_gepa_config.py
(+4 files in other folders)
