[build-system]
requires = ["setuptools>=77.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "terrarium"
version = "0.1.0"
description = "Common evaluation infrastructure for evolving/auto-research systems."
requires-python = ">=3.10"
dependencies = [
    "hydra-core>=1.3",
    "omegaconf>=2.3",
]

[project.optional-dependencies]
gepa = ["gepa"]
frontier_cs = [
    # frontier-cs itself requires Python >= 3.11; gate on that marker so
    # terrarium's broader 3.10 support isn't blocked at lock time.
    "frontier-cs @ git+https://github.com/FrontierCS/Frontier-CS ; python_version >= '3.11'",
    "datasets>=2.14",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
terrarium = ["conf/**/*.yaml"]
