[build-system]
requires = ["setuptools>=77.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "terrarium"
version = "0.1.0"
description = "Common evaluation infrastructure for evolving/auto-research systems."
requires-python = ">=3.10"
dependencies = [
    "hydra-core>=1.3",
    "omegaconf>=2.3",
]

[project.optional-dependencies]
gepa = ["gepa"]
frontier_cs = [
    # frontier-cs itself requires Python >= 3.11; gate on that marker so
    # terrarium's broader 3.10 support isn't blocked at lock time.
    "frontier-cs @ git+https://github.com/FrontierCS/Frontier-CS ; python_version >= '3.11'",
    "datasets>=2.14",
]
# Can't Be Late: vendored sky-spot simulator. Configs ship with terrarium;
# the AWS spot-availability traces are an external download (one-time, see
# the docstring in terrarium/tasks/cant_be_late.py).
cant_be_late = [
    "colorama",
    "ConfigArgParse",
    "filelock",
    "numpy",
    "pandas",
    "PyYAML",
    "tqdm",
    "wandb",
]
# Cloudcast: vendored multi-cloud broadcast simulator. Configs and pricing /
# throughput profiles all ship with terrarium — no external data needed.
cloudcast = [
    "networkx>=2.6",
    "pandas>=1.3",
    "numpy>=1.20",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
terrarium = [
    "conf/**/*.yaml",
    # Vendored ADRS task data (configs, pricing/throughput profiles, simulator).
    "tasks/cloudcast_lib/core/config/*.json",
    "tasks/cloudcast_lib/core/profiles/*.csv",
    "tasks/cant_be_late_lib/simulator/**/*.py",
]
